--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
     <body>
         <h1>Welcome to my web side!</h1>
         Hello, word!
-        This is CS50
+        <h2>Commit is very important in hithub</h2>
     </body>
 </html>
