--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,11 @@
     <head>
         <title>Hello!</title>
     </head>
+    <style>
+        h1{
+            color: blue;
+        }
+    </style>
     <body>
         <h1>Welcome to my web side!</h1>
         Hello, word!
