Esta es una prueba con la consola

--- a/hello2.html
+++ b/hello2.html
@@ -6,8 +6,7 @@
     <body>
         <h1>Welcome to my web side!</h1>
             Hello, word!
-        <h2>Commit is very important in hithub</h2>
-        <h1>23 de Febrero comenzamos oficialmente a trabajar en la pagina web</h1>
-        <h2>Commit = hacer</h2>
+            Continuamos averiguando como es que trabaja Git
+        <h2>git add hello2.html</h2>
     </body>
 </html>
