Add un mensaje desde el browser

--- a/hello.html
+++ b/hello.html
@@ -9,5 +9,6 @@
         <h2>Commit is very important in hithub</h2>
         <h1>23 de Febrero comenzamos oficialmente a trabajar en la pagina web</h1>
         <h2>Commit = hacer</h2>
+        Utilizando git pull (sirve para que si alguien edita el codigo en el browser yo lo pueda bajar a mi codigo en la computadora)
     </body>
 </html>
